Replace `newInstance()` with `getConstructor().newInstance()`